@@ -1,3 +1,15 @@
+2004-02-27  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	PR optimization/7871
+	* flow.c (mark_set_1): Don't add LOG_LINKS for global registers
+	from or to call insns.	
+
+2004-02-27  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/7871
+	* flow.c (propagate_one_insn): Interpret calls as setting global
+	registers, not merely clobbering them.
+
 2004-02-27  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/fixunssfsi.c (__fixunssfsi): Enable on H8/300
